tests/positive/constant_range_bound.safe
-- Test: constant_range_bound
-- Description: Local integer constant used in a type range bound.
-- Expected: ACCEPT

package constant_range_bound

   max_count : constant integer = 4

   subtype index is integer (0 to max_count)

